# ottobangumi

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  README.md  docker-build.sh
src/: bot.rs  database.rs  downloader.rs  lib.rs  main.rs  title_parser.rs  utils.rs
src/mikan/: mikan_parser.rs  mikan_rss.rs  mod.rs
