[package]
edition = "2021"
name = "ottobangumi"
version = "0.1.0"
authors = ["nekomoyi <funny_mo_yi@foxmail.com>"]

[dependencies]
anyhow = "1.0.82"
clokwerk = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
lava_torrent = "0.11.1"
log = "0.4.21"
# uncomment this when building docker image
# openssl = { version = "0.10.64", features = ["vendored"] }
polodb_core = "4.4.1"
qbit-api-rs = "0.2.0"
regex = "1.10.4"
reqwest = "0.12.2"
rss = "2.0.7"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.19"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.58"
tokio = { version="1.36.0", features=["full"] }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
